changed @import to <link> for Google Font API

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <title>Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"</title>
         <meta name="description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<!--<link rel="stylesheet" href="meta/styles/main.css">-->
 
 <style>
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 html {box-sizing: border-box;font-family: 'Open sans',sans-serif;font-size: 100%;line-height: 1.5;}
 *, *:before, *:after {box-sizing: inherit;}
 body {color:#333;margin:0;padding:0;}
