set base line-height to rem value

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-	<!--<link rel="stylesheet" href="meta/styles/main.css">-->
+	<!--<link rel="stylesheet" href="meta/styles/main.css" />-->
 <style>
-html {box-sizing:border-box;font-family:'Open sans',sans-serif;font-size:100%;line-height:1.5;}
+html {box-sizing:border-box;font-family:'Open sans',sans-serif;font-size:100%;line-height:1.7rem;}
 *, *:before, *:after {box-sizing:inherit;}
 body {color:#333;margin:0;padding:0;}
 a {font-weight:700;text-decoration:none;}
@@ -43,7 +43,7 @@ input {border-radius:4px;outline:none;}
 @media all and (min-width:48em) {
 	.flexbox {flex-direction:row;}
 	.flexbox > div {width:50%;}
-	.flex-facet {border-left:1px solid #d8d8d8;border-top: 0 none;}
+	.flex-facet {border-left:1px solid #d8d8d8;border-top:0 none;}
 }
 </style>
 <!--[if IE]>
