grammar fix - missing period *grumbles to self*

--- a/privacy.html
+++ b/privacy.html
@@ -61,7 +61,7 @@ input {border-radius:4px;outline:none;}
 			<li>Cues from the "machine": HTTP Headers, global server variables, and location info from the network or browser</li>
 			<li>IP and PII (personally identifiable information) anonymized search log and web analytics data</li>
 		</ul>
-		<p>I'm interested in finding the line where utility and adding value with this data cross into notions of surveillance, If you have thoughts or want to learn more, <a href="http://www.jasonclark.info">contact Jason A. Clark</a> or find me on twitter <a href="https://twitter.com/jaclark">@jaclark</a>.</p>
+		<p>I'm interested in finding the line where utility and adding value with this data cross into notions of surveillance. If you have thoughts or want to learn more, <a href="http://www.jasonclark.info">contact Jason A. Clark</a> or find me on twitter <a href="https://twitter.com/jaclark">@jaclark</a>.</p>
 	</div>
 	<div class="flex-facet" role="complementary">
 		<h1>Links</h1>
