added "about" to H1 and title display

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ input {border-radius:4px;outline:none;}
 <body>
 <div class="flexbox fullheight fullwidth">
 	<div class="flex-search" role="main"> 
-		<h1>Ten Blue Links</h1>
+		<h1>About - Ten Blue Links</h1>
 		<p>Search Application for “Improving Search UX using Query Analysis and Machine Cues”</p>
 		<ul>
 			<li>Prototype for Digital Library Forum 2015 presentation: “Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues”</li>
