page padding adjustment - added whitespace

--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@ input {border-radius:4px;outline:none;}
 .flex-search {}
 .flex-facet {background: #eff1f3;border-top: 1px solid #d8d8d8;}
 /* make direct descendents display as columns */
-.flexbox > div {width:100%;padding:10px;display:flex;flex-direction:column;flex:1;/*shorthand for flex-grow: 1;flex-shrink: 1;flex-basis: auto;*/}
+.flexbox > div {width:100%;padding:1.5rem;display:flex;flex-direction:column;flex:1;/*shorthand for flex-grow: 1;flex-shrink: 1;flex-basis: auto;*/}
 .flexbox > div:first-child {margin-right:20px;}
 /* larger screen styles (above 48em) */
 @media all and (min-width:48em) {
