switched order of privacy and about links

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ echo $q;
         } // End (!is_null($q))
 ?>
 		<p>With this prototype, I'm looking at ways that the search act can be treated as a conversation.</p>
-                <p class="info"><a href="privacy.html">Privacy?</a> <a href="about.html">What is this?</a></p>
+                <p class="info"><a href="about.html">What is this?</a> <a href="privacy.html">Privacy?</a></p>
 	</div>
 </div>
 </body>
